# mnist_mlops

./: README.md  pyproject.toml
model/: model.pkl
src/: main.py
