[tool.poetry]
name = "mnist-mlops"
version = "0.1.0"
description = ""
authors = ["Mo3tsm <mo5les75291@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.5.2"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
